--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+  <!-- <div class="wrapper"> -->
   <div class="nav_container">
     <div class="nav clearfix">
       <div class="logo_cont">
-        <img src="/assets/img/image.png" alt="">
+        <img src="/assets/img/logo.png" alt="">
       </div>
       <div class="nav_links">
         <a href="/login">Login</a>
@@ -30,9 +31,25 @@
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide">
-        <div class="container">
-          <div class="left_content">1</div>
-          <div class="right_content">1</div>
+        <div class="bg1">
+          <div class="container">
+            <div class="bg1 one">
+              <div class="left_content">
+                <div class="top-text"></div>
+                <div class="big_text">Manage Everything <br> in One Place</div>
+                <p>Streamline your operations with our all-in-one ERP solution.</p>
+                <div class="button">
+                  <button class="getStarted">Get Started</button>
+                  <button class="login">Login</button>
+                </div>
+              </div>
+              <div class="right_content">
+                <div class="image_cont">
+                  <img src="/assets/img/14.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="swiper-slide">Slide 2</div>
@@ -43,6 +60,8 @@
 
 
   </div>
+  <!-- </div> -->
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -53,7 +72,7 @@
       effect: "fade",
       centeredSlides: true,
       autoplay: {
-        delay: 2500,
+        delay: 12500,
         disableOnInteraction: false,
       },
     });
