--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Landing page</title>
 </head>
 
@@ -15,7 +15,7 @@
   <div class="nav_container">
     <div class="nav clearfix">
       <div class="logo_cont">
-        <img src="/assets/img/logo.png" alt="">
+        <img src="/img/logo.png" alt="">
       </div>
       <div class="nav_links">
         <a href="/login">Login</a>
@@ -45,7 +45,7 @@
               </div>
               <div class="right_content">
                 <div class="image_cont">
-                  <img src="/assets/img/14.png" alt="">
+                  <img src="/img/14.png" alt="">
                 </div>
               </div>
             </div>
