--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="nav_container">
     <div class="nav clearfix">
       <div class="logo_cont">
-        <img src="/img/logo.png" alt="">
+        <img src="https://kingayo12.github.io/landingpages.github.io/img/logo.png" alt="">
       </div>
       <div class="nav_links">
         <a href="/login">Login</a>
@@ -45,7 +45,7 @@
               </div>
               <div class="right_content">
                 <div class="image_cont">
-                  <img src="/img/14.png" alt="">
+                  <img src="https://kingayo12.github.io/landingpages.github.io/img/14.png" alt="">
                 </div>
               </div>
             </div>
